# vss-cli

./: .bumpversion.cfg  .codeclimate.json  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  pyproject.toml  requirements.dev.txt  requirements.test.txt  requirements.txt  setup.cfg  setup.py
.agent-os/product/: roadmap.md
.agent-os/specs/2025-10-09-configure-keyring-integration/: spec-lite.md  tasks.md
.gitlab/issue_templates/: bug.md  improvement.md  issue.md  new-feature.md  version-release.md
.gitlab/merge_request_templates/: merge.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
HomebrewFormula/: vss-cli.rb
_docs/: api-integration.md  architecture.md  commands.md  development.md  plugin-system.md
agent-os/: config.yml
agent-os/product/: mission-lite.md  mission.md  roadmap.md  tech-stack.md
agent-os/specs/2025-10-07-secure-credential-keystore/: spec-lite.md  spec.md  tasks.md
agent-os/specs/2025-10-09-configure-keyring-integration/: spec.md
agent-os/specs/2025-10-17-fix-gitlab-ci-sphinx-build-error/: spec.md  tasks.md
agent-os/specs/2025-11-06-assist-show-reasoning-flag/: orchestration.yml  spec.md  tasks.md
agent-os/specs/2025-12-07-add-request-timeouts/: spec.md  tasks.md
docker/: Dockerfile  docker-vss-cli
docs/: Makefile  changelog.rst  conf.py  configure.rst  development.rst  docker.rst  index.rst  install.rst  make.bat  upgrade.rst  use.rst
docs/examples/: client-note.rst  deploy-clib.rst  deploy-clone.rst  deploy-image.rst  deploy-os.rst  deploy-photon-os.rst  deploy-template.rst  disk.rst  export-vm.rst  folder.rst  images.rst  index.rst  inventory.rst  mfa.rst  network.rst  pvscsi.rst  schedule-change.rst  snapshot.rst  verify-permission.rst
docs/specification/: clone.rst  content-library.rst  image.rst  index.rst  shell.rst  template.rst
specs/812-vm-mk-gpu-support/: plan.md  spec.md  tasks.md
specs/814-fix-dependabot-cves/: plan.md  spec.md  tasks.md
specs/815-fix-pre-commit-hooks/: plan.md  spec.md  tasks.md
tests/: __init__.py  test_assist.py  test_configure_integration.py  test_configure_integration_simple.py  test_configure_ls_backend.py  test_configure_mk_backend.py  test_credentials.py  test_encrypted_backend.py  test_keychain_backend.py  test_migration.py  test_onepassword_backend.py  test_onyx_endpoint_migration.py  test_timeouts.py  test_vm_mk_gpu.py  test_vss_cli.py
vss_cli/: autocompletion.py  cli.py  config.py  const.py  data_types.py  exceptions.py  hcio.py  helper.py  ovf_helper.py  rel_opts.py  remote.py  sstatus.py  validators.py  vss.py  vssconst.py  yaml.py
vss_cli/credentials/: __init__.py  base.py  migration.py
vss_cli/data/: clib.yaml  clone.yaml  image.yaml  shell.yaml  template.yaml
vss_cli/plugins/: __init__.py  account.py  assist.py  completion.py  compute.py  configure.py  key.py  mcp.py  message.py  misc.py  ovf.py  plugins.py  raw.py  request.py  service.py  shell.py  status.py  stor.py  token.py  upgrade.py  vpn.py
vss_cli/utils/: emoji.py  mcp.py  threading.py
(+62 files in other folders)
