[metadata]
license      = MIT
license_file = LICENSE
platforms    = any
description  = ITS Private Cloud Command Line Interface
long_description = file: README.md
long_description_content_type = text/markdown
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Home Automation
