[metadata]
license      = MIT
license_file = LICENSE
platforms    = any
description  = ITS Private Cloud Command Line Interface
long_description = file: README.md
long_description_content_type = text/markdown
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: System Administrators
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: System :: Systems Administration

[flake8]
exclude = .venv,.git,docs,venv,bin,lib,deps,build
ignore = F401,E402,

[isort]
line_length=79
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
# splits long import on multiple lines indented by 4 spaces
multi_line_output = 4
indent = "    "
# skipping due to special requirements
skip = compute.py,request.py
# by default isort don't check module indexes
not_skip = __init__.py
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
sections = FUTURE,STDLIB,INBETWEENS,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
known_first_party = vss_cli,tests
forced_separate = tests
combine_as_imports = true
use_parentheses = true

[build_sphinx]
source-dir = docs
config-dir = docs
build-dir = docs/_build
builder = html, man
