[metadata]
license      = MIT
license_files = LICENSE
platforms    = any
description  = ITS Private Cloud Command Line Interface
long_description = file: README.md
long_description_content_type = text/markdown
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: System Administrators
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Systems Administration

[flake8]
exclude = .venv,.git,docs,venv,bin,lib,deps,build
ignore = F401,E402,W503
per-file-ignores =
    tests/*:D100,D101,D102,D104,E501,F841

[isort]
profile=black
line_length=79
force_sort_within_sections = true
not_skip = __init__.py
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
known_first_party = vss_cli,tests
forced_separate = tests

[build_sphinx]
source-dir = docs
config-dir = docs
build-dir = docs/_build
builder = html, man

[bdist_wheel]
universal = 1